--- a/test/MockClient/src/App.module.css
+++ b/test/MockClient/src/App.module.css
@@ -227,16 +227,17 @@
     flex-direction: column;
     align-items: flex-start;
     background: white;
-    padding-bottom: 1rem;
+    margin: .5rem 0;
     min-width: 100%;
+    box-shadow: 0 2px 10px black;
+    border-bottom: 1px solid black;
 }
 
 .packetNumber {
+    border-bottom: 1px solid black;
     height: 1.5rem;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid black;
-    box-shadow: 0 2px 10px black;
     width: 100%;
 }
 
@@ -245,6 +246,10 @@
 }
 
 .packetContent {
-    margin-top: .5rem;
-    word-wrap: break-word;
+    margin: .5rem 0;
+    word-wrap: anywhere;
+}
+
+.packetContent > div {
+    margin-left: 1rem;
 }
